<resources>
    <string name="app_name">RecipeBox</string>
    <string name="add_photo">Add Photo</string>
    <string name="clear_photo">Clear Photo</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="prep_time">Prep Time</string>
    <string name="cook_time">Cook Time</string>
    <string name="serves">Serves</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="in_minutes">in minutes</string>
    <string name="add_to_favorites">Add to Favorites?</string>
    <string name="add_edit_save_error_toast_message">The following fields are required:</string>
    <string name="change_photo">Change Photo</string>
    <string name="upload_your_photo_here">Upload your Photo here</string>
    <string name="none_loaded">None</string>
    <string name="unfavorite">UnFavorite</string>
    <string name="add_favorite">Add Favorite</string>

    <string-array name="food_filter">
        <item>All Foods</item>
        <item>Chicken</item>
        <item>Beef</item>
        <item>Pork</item>
    </string-array>

    <string-array name="favorite_filter">
        <item>All Recipes</item>
        <item>Favorites</item>
    </string-array>
    <string name="remove_ingredient_button">Remove Ingredient Button</string>
    <string name="edit_ingredient_button">Edit Ingredient Button</string>
    <string name="your_recipe_photo">Your Recipe Photo</string>
    <string name="add_remove_favorites_button">Add/Remove Favorites Button</string>
    <string name="share_recipe_button">Share Recipe Button</string>
    <string name="remove_recipe_direction_button">Remove Recipe Direction Button</string>
    <string name="edit_recipe_direction_button">Edit Recipe Direction Button</string>
    <string name="app_title_name">RecipeBox</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_direction">Add Direction</string>
    <string name="search_by_ingredient">Search by Ingredient</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="qty">Qty</string>
    <string name="measurement_label">m.</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="minutes_display">%1$s minutes</string>
    <string name="update_direction">Update Direction</string>
    <string name="update_ingredient">Update Ingredient</string>
    <string name="done">Done</string>
    <string name="add_another">Add another</string>
    <string name="users_path_segment">users/</string>
    <string name="recipes_path_segment">/recipes</string>
    <string name="photos_path_segment">/photos</string>
    <string name="new_string">new</string>
    <string name="add_recipe">Add New Recipe</string>
    <string name="blank_space"> </string>
    <string name="complete_action">Complete action using</string>
    <string name="are_you_sure">Are you sure you want to delete</string>
    <string name="affirmative">Yes</string>
    <string name="question_mark">\?</string>
    <string name="no_string">No</string>
    <string name="photo_upload_failed">Photo Upload Failed</string>
    <string name="prep_time_share_string">Prep Time: %1$s minutes</string>
    <string name="cook_time_share_string">Cook Time: %1$s minutes</string>
    <string name="serves_share_string">Serves: %1$s</string>
    <string name="ingredients_share_string">Ingredients: %1$s</string>
    <string name="directions_share_string">Directions: %1$s</string>
    <string name="share_using">Share using</string>
    <string name="recipe_unfavorited">%1$s unfavorited.</string>
    <string name="recipe_favorited">%1$s favorited.</string>
    <string name="find_recipe">Find Recipe</string>
    <string name="signed_in">Signed in</string>
    <string name="sign_in_canceled">Sign in canceled</string>
    <string name="all_foods">All Foods</string>


</resources>
