<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quantity_add_edit_text"
        android:hint="@string/qty"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/measurement_add_edit_text" />
    <EditText
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/measurement_add_edit_text"
        android:hint="@string/measurement_label"
        app:layout_constraintTop_toTopOf="@id/quantity_add_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/quantity_add_edit_text"
        app:layout_constraintLeft_toRightOf="@id/quantity_add_edit_text"
        app:layout_constraintRight_toLeftOf="@id/ingredient_add_edit_text" />
    <EditText
        android:inputType="textCapWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ingredient_add_edit_text"
        android:hint="@string/ingredient_name"
        app:layout_constraintTop_toTopOf="@id/quantity_add_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/quantity_add_edit_text"
        app:layout_constraintLeft_toRightOf="@id/measurement_add_edit_text"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>