<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/detail_image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttons_wrapper"
        app:layout_constraintTop_toBottomOf="@id/detail_image_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_share_button"
            android:text="Share Recipe"
            app:layout_constraintLeft_toRightOf="@id/detail_edit_button"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_edit_button"
            android:text="Edit Recipe"
            app:layout_constraintRight_toLeftOf="@id/detail_share_button"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add to Favorites"
            app:layout_constraintTop_toBottomOf="@+id/detail_share_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prep_time_text_view_detail_screen"
        android:text="@string/prep_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_wrapper"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prep_time_variable_text_view_detail_screen"
        app:layout_constraintLeft_toRightOf="@id/prep_time_text_view_detail_screen"
        app:layout_constraintTop_toTopOf="@id/prep_time_text_view_detail_screen"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cook_time_text_view_detail_screen"
        android:text="@string/cook_time"
        app:layout_constraintTop_toTopOf="@id/cook_time_variable_text_view_detail_screen"
        app:layout_constraintRight_toLeftOf="@id/cook_time_variable_text_view_detail_screen"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cook_time_variable_text_view_detail_screen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_wrapper"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/servings_constraint_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cook_time_text_view_detail_screen">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/servings_label_detail_view"
        android:text="@string/serves"
        app:layout_constraintRight_toLeftOf="@+id/servings_variable_detail_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/servings_variable_detail_view"
            app:layout_constraintRight_toLeftOf="@id/servings_label_detail_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/ingredients_detail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/ingredients"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/servings_constraint_view" />

    <com.fatmogul.recipebox.NonScrollListView
        android:id="@+id/ingredients_detail_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredients_detail_text_view" />

    <TextView
        android:id="@+id/directions_detail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="Directions"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredients_detail_list_view" />

    <com.fatmogul.recipebox.NonScrollListView
        android:id="@+id/directions_detail_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/directions_detail_text_view" />

</android.support.constraint.ConstraintLayout>